--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
+html {
+  font-family: Arial;
+  font-size: 16px;
+  background: white;
+  overflow-y: hidden;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.colorChooser {
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.editButton {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.bottomMiddle {
+  position: absolute;
+  bottom: 0;
+  right: 35%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.createObject {
+  position: fixed;
+  width: 60%;
+  height: 60%;
+  margin-left: 20%;
+  margin-top: 5%;
+  background-color: white;
+  border: solid 1px black;
+  z-index: 20;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.object {
+  transform: rotate(45deg);
+  border: 1px solid black;
+  overflow: hidden;
+  position: absolute;
+}
+
+.numBox, .textBox {
+  width: 50px;
+}
+
+.mainCanvas {
+  margin-top: 10px;
+}
+
+.sidebar {
+  position: fixed;
+  width: 25%;
+  height: 100vh;
+  background: lightgray;
+}
+
+.nav {
+  position: relative;
+  margin: 0 15%;
+  font-weight: bold;
+}
+
+.main {
+  width: 75%;
+  float: right;
+  height: 100vh;
 }
